Bug 277228 - Tooltip for number resolving is wrong with umlauts
Summary: Tooltip for number resolving is wrong with umlauts
Status: RESOLVED FIXED
Alias: None
Product: kfritz
Classification: Applications
Component: Call list (other bugs)
Version First Reported In: 0.0.7
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Joachim Wilke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-06 19:27 UTC by Rolf Eike Beer
Modified: 2011-07-10 17:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rolf Eike Beer 2011-07-06 19:27:21 UTC
Version:           0.0.7 (using KDE 4.6.4) 
OS:                Linux

I have people with Umlauts in my local phonebook. If I now select a call in call history and use "resolve number" I get the name correctly displayed in the phone list. But the tooltip shows garbage, looks like the string is double encoded or something.

Reproducible: Always

Steps to Reproduce:
Enter name with Umlauts in local phone book.


Expected Results:  
Tooltip should show proper string.
Comment 1 Joachim Wilke 2011-07-10 17:58:59 UTC
This has been fixed with git commit
http://commits.kde.org/kfritz/2d13702c07b093b7ba93b534017b44dc969e3fd2