Fix encoding of data received from libfritz++ and shown in kfritz GUI

- "Resolves to" message in status bar was not correctly encoded

BUG: 277228
FIXED-IN: 0.0.8